// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoSuggestionInputSchema should be invalid for all empty 1`] = `
{
  "filename": "yup:mixed.required",
  "resolution": "yup:mixed.required",
}
`;

exports[`PhotoSuggestionInputSchema should be invalid for no filename 1`] = `
{
  "filename": "yup:mixed.required",
}
`;

exports[`PhotoSuggestionInputSchema should be invalid for no resolution 1`] = `
{
  "resolution": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for all empty 1`] = `
{
  "description": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for bad resolution 1`] = `
{
  "resolution": {
    "key": "yup:array.max",
    "options": {
      "max": 2,
      "path": "resolution",
    },
  },
}
`;

exports[`SuggestionInputSchema should be invalid for bad uuid 1`] = `
{
  "section": {
    "id": {
      "key": "yup:string.uuid",
      "options": {
        "path": "section.id",
      },
    },
  },
}
`;

exports[`SuggestionInputSchema should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`SuggestionInputSchema should be invalid for filename without resolution 1`] = `
{
  "resolution": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for just media 1`] = `
{
  "description": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for no description and no media 1`] = `
{
  "description": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for resolution without filename 1`] = `
{
  "filename": "yup:mixed.required",
}
`;
